feat: add multi-account login with rotation and session persistence

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,16 @@ LOG_LEVEL=info
 
 # CRON Schedule (doc_id validation - default: 3:00 AM daily)
 DOCID_CRON_SCHEDULE=0 3 * * *
+
+# ========================================
+# Instagram Accounts for Scraping (REQUIRED)
+# ========================================
+# Multiple accounts for rotation and redundancy
+# Format: JSON array with username and password for each account
+# The system will rotate between accounts automatically
+# If an account gets banned, it will be removed from rotation
+# Example with multiple accounts:
+INSTAGRAM_ACCOUNTS=[{"username":"scraper_account_1","password":"password1"},{"username":"scraper_account_2","password":"password2"},{"username":"scraper_account_3","password":"password3"}]
+
+# Sessions storage directory (where login sessions are saved)
+SESSIONS_DIR=/data/sessions
