feat: add 2FA TOTP support for Instagram login
- Install otplib dependency for TOTP code generation
- Add totp_secret field to account loading
- Detect 2FA challenge during login
- Auto-generate and submit TOTP codes
- Support multiple input field selectors

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "node-cron": "^3.0.3",
+    "otplib": "^13.1.1",
     "playwright": "1.40.1",
     "winston": "^3.11.0"
   },
