--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "node-cron": "^3.0.3",
-    "otplib": "^13.1.1",
     "playwright": "1.40.1",
+    "speakeasy": "^2.0.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
