--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ioredis": "^5.3.2",
     "node-cron": "^3.0.3",
     "playwright": "1.40.1",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "speakeasy": "^2.0.0",
     "winston": "^3.11.0"
   },
