--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.6.5",
     "bottleneck": "^2.19.5",
     "bull": "^4.12.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
